fix: added z-index to wrapper & container

--- a/src/components/CommentsModal/CommentsModal.css
+++ b/src/components/CommentsModal/CommentsModal.css
@@ -5,6 +5,7 @@
   bottom: 0;
   left: 0;
   opacity: 0.7;
+  z-index: 10;
 }
 
 .modal-container {
@@ -12,6 +13,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 20;
 }
 
 .modal-container::-webkit-scrollbar {
